--- a/vip-desigin/作业地址.md
+++ b/vip-desigin/作业地址.md
@@ -1,2 +1,4 @@
 工厂模式	https://gper.gupaoedu.com/articleContent?id=641
 单例模式	https://gper.gupaoedu.com/articleContent?id=657
+
+我的作业地址：https://github.com/xianlonglu/vip/tree/master/vip-desigin/src/main/java/com/lxl
